# hack-meridian

./: .env.example  .gitignore  README.md  package.json  run.sh
contracts/: Cargo.toml  Makefile  deployments.json  package.json
contracts/factory/: Cargo.toml  Makefile
contracts/payroll-vault/: Cargo.toml  Makefile
contracts/payroll-vault/src/: balance.rs  error.rs  interface.rs  lender_balance.rs  lib.rs  models.rs  storage.rs  test.rs  utils.rs
contracts/payroll-vault/src/test/: claim_salary.rs  deposit.rs  employ.rs  fire.rs  initialize.rs  pay_employees.rs  withdraw.rs
contracts/scripts/: deploy.ts  publish_addresses.ts  test.ts
contracts/utils/: contract.ts
public/: pdf.min.mjs  testnet.contracts.json
src/: store-provider.tsx
src/components/: example.tsx
src/components/Accordion/: TradContractsAccorrdion.tsx
src/components/Drawer/: Drawer.tsx
src/components/Modals/: BusinessAccountModal.tsx  CreateContractModal.tsx
src/components/buttons/: FireButton.tsx  PayButton.tsx
src/components/layout/: BaseLayout.tsx  CenterBody.tsx  MainPage.tsx  SearchBar.tsx
src/components/upload/: index.ts  index.tsx
src/components/web3/: ConnectButton.tsx  ConnectWalletModal.tsx  MySorobanReactProvider.tsx
src/constants/: testnet.contracts.json
src/hooks/: useEmployer.ts  usePayroll.ts
src/pages/: _app.tsx  _document.tsx  index.tsx  sign.tsx
src/pages/upload/: index.tsx
src/store/: store.ts
src/store/features/: employerStore.ts
src/styles/: GlobalStyles.tsx
src/utils/: payrollVault.ts  pinataHelper.ts  shortenAdress.ts
(+1 files in other folders)
