[package]
name = "payroll-vault"
version = { workspace = true }
authors = ["coderipper <joaquin@paltalabs.io>", "esteblock <esteban@paltalabs.io>"]
license = { workspace = true }
edition = { workspace = true }
publish = false
repository = { workspace = true }

[lib]
crate-type = ["cdylib"]
 
[dependencies] 
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }